--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer{
-    margin: 0px 100px;
+    margin-left: 15px;
+    margin-right: 15px;
     display: flex;
     flex-direction: column;
     gap: 11px;
